<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/number"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvName"
            app:layout_constraintEnd_toStartOf="@id/ivFavorite"
            app:layout_constraintTop_toTopOf="@+id/tvName" />

        <ImageView
            android:id="@+id/ivFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/light_gray"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipType1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textAlignment="center"
            android:textSize="10sp"
            app:chipMinTouchTargetSize="0dp"
            app:layout_constraintBottom_toBottomOf="@id/ivPokemon"
            app:layout_constraintStart_toStartOf="@id/tvName"
            tools:ignore="SmallSp,TouchTargetSizeCheck" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipType2"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/type"
            android:textAlignment="center"
            android:textSize="10sp"
            app:chipMinTouchTargetSize="0dp"
            app:layout_constraintBottom_toTopOf="@id/chipType1"
            app:layout_constraintEnd_toEndOf="@id/chipType1"
            app:layout_constraintStart_toStartOf="@id/chipType1"
            tools:ignore="SmallSp,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

        <ImageView
            android:id="@+id/ivPokemon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/chipType1"
            app:layout_constraintTop_toBottomOf="@id/tvNumber"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>